cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark__cfn_templates__Tianyi2__IRIS__data__cloudformation_collected_templates_new__template_05423_sg.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Deploy SGs required by entire stack.

Parameters:
  VpcId:
    Description: VPC ID for the stack
    Type : AWS::EC2::VPC::Id
  Environment:
    Type: String

Resources:
  AdminSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Admin Access - Allowing SSH & RDP
      VpcId: !Ref VpcId
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '3389'
        ToPort: '3389'
        SourceSecurityGroupId:
          Fn::GetAtt:
            - BastionSecurityGroup
            - GroupId
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        SourceSecurityGroupId:
          Fn::GetAtt:
            - BastionSecurityGroup
            - GroupId
      Tags:
        - Key: Environment
          Value: !Ref Environment
        - Key: Name
          Value:
            Fn::Join:
            - '-'
            - ["", "ACME", !Ref Environment,  "AdminSecurityGroup"]
  BastionSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Bastion Access - Allowing SSH & RDP
      VpcId: !Ref VpcId
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '3389'
        ToPort: '3389'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 0.0.0.0/0
      Tags:
        - Key: Environment
          Value: !Ref Environment
        - Key: Name
          Value:
            Fn::Join:
            - '-'
            - ["", "ACME",  "BastionSecurityGroup"]
Outputs:
 AdminSecurityGroup:
        Value: !Ref AdminSecurityGroup
 BastionSecurityGroup:
        Value: !Ref BastionSecurityGroup
